added pages to repository